<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/choose_viewer"
        android:title="@string/choose_viewer" />

    <item android:title="@string/choose_effect">
        <menu>
            <item
                android:checkable="true"
                android:id="@+id/choose_effect_disable"
                android:title="@string/effect_disable" />

            <item
                android:checkable="true"
                android:id="@+id/choose_effect_cartoon"
                android:title="@string/effect_cartoon" />

<!--            <item-->
<!--                android:checkable="true"-->
<!--                android:id="@+id/choose_effect_gaussian"-->
<!--                android:title="@string/effect_gaussian" />-->

            <item
                android:checkable="true"
                android:id="@+id/choose_effect_nostalgia"
                android:title="@string/effect_nostalgia" />

<!--            <item-->
<!--                android:checkable="true"-->
<!--                android:id="@+id/choose_effect_pixelize"-->
<!--                android:title="@string/effect_pixelize" />-->

            <item
                android:checkable="true"
                android:id="@+id/choose_effect_black_and_white"
                android:title="@string/effect_black_and_white" />

            <item
                android:checkable="true"
                android:id="@+id/choose_effect_gray"
                android:title="@string/effect_gray" />

            <item
                android:checkable="true"
                android:id="@+id/choose_effect_negative"
                android:title="@string/effect_negative" />
        </menu>
    </item>
</menu>